# orange3_scatter3d

./: LICENSE  README.md  pyproject.toml  setup.py  uninstall.bat
doc/: conf.py  index.rst
doc/widgets/: scatter3d.md
orangecontrib/vis3d/tests/: test_example.py
orangecontrib/vis3d/widgets/: scatter3d.py
